syntax = "proto3";
option go_package = "../getCaptcha;getCaptcha";
package getCaptcha;

service GetCaptcha {
    rpc Call(Request) returns (Response){}
}

// 生成验证码直接由框架完成 不用传入参数
message Request{
    string uuid= 1;
}

// 穿出参数是图片 不过图片嵌套了多层结构体不好表示 可以将图片作为字节数传给客户端，客户端再反序列化为图片对象
message Response{
    // 字节切片存储图片信息 json序列化
    bytes img = 1;
}